[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
graphql_schema_parser = { path  = "../graphql_schema_parser"}
