[package]
name = "intern"
version = "0.0.4"
authors = ["forked from Facebook"]
edition = "2021"
description = "Intern data into a 32-bit id; forked from the Relay repo to increase reliability of GitHub Actions"
repository = "https://github.com/facebook/relay"
license = "MIT"

[dependencies]

[dev-dependencies]
bincode = "1.3.3"
rand = { version = "0.8", features = ["small_rng"] }
serde_json = { version = "1.0.100", features = [
    "float_roundtrip",
    "unbounded_depth",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(memory_consistency_assertions)',
] }
